[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/user-interface/quest-menu/quest-menu.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogic/Documentation/Theme/Font/NotoSans-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 1 )

[node name="Quests" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_left = 60.0
margin_right = 60.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 88.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ButtonOpenQuestMenu" type="Button" parent="CanvasLayer/UI/MarginContainer"]
physics_interpolation_mode = 1
margin_left = 10.0
margin_top = 10.0
margin_right = 68.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Quests"
align = 0

[node name="QuestMenu" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/QuestMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/QuestMenu/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
color = Color( 0.658824, 0.65098, 0.0862745, 0.894118 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="QuestMenuBody" type="VBoxContainer" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 964.0
margin_bottom = 540.0

[node name="QuestStatus" type="HBoxContainer" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody"]
margin_right = 944.0
margin_bottom = 32.0
alignment = 1

[node name="QuestStatusLabel" type="Label" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody/QuestStatus"]
margin_left = 472.0
margin_right = 472.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="SelectedQuest" type="HBoxContainer" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody"]
margin_top = 36.0
margin_right = 944.0
margin_bottom = 492.0
size_flags_vertical = 3

[node name="QuestImage" type="TextureRect" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody/SelectedQuest"]
margin_bottom = 456.0

[node name="QuestText" type="VBoxContainer" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody/SelectedQuest"]
margin_left = 4.0
margin_right = 944.0
margin_bottom = 456.0
size_flags_horizontal = 3
alignment = 1

[node name="QuestLabel" type="Label" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody/SelectedQuest/QuestText"]
margin_top = 203.0
margin_right = 940.0
margin_bottom = 234.0
custom_colors/font_color = Color( 0, 0.196078, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "You have no quests."
align = 1

[node name="QuestDescription" type="Label" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody/SelectedQuest/QuestText"]
margin_top = 238.0
margin_right = 940.0
margin_bottom = 252.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0.196078, 1, 1 )
align = 1
autowrap = true

[node name="QuestList" type="HBoxContainer" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody"]
margin_top = 496.0
margin_right = 944.0
margin_bottom = 496.0
alignment = 1

[node name="QuestMenuActions" type="HBoxContainer" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody"]
margin_top = 500.0
margin_right = 944.0
margin_bottom = 520.0
alignment = 2

[node name="ButtonCloseQuestMenu" type="Button" parent="CanvasLayer/QuestMenu/MarginContainer/ColorRect/MarginContainer/QuestMenuBody/QuestMenuActions"]
margin_left = 857.0
margin_right = 944.0
margin_bottom = 20.0
text = "Close Menu"
